Revert "FIX: various select-kit corrections on mobile"
This reverts commit 78a2324c89b1865d34ec201457ef184ce723476a.

--- a/app/assets/stylesheets/mobile/select-kit/dropdown-select-box.scss
+++ b/app/assets/stylesheets/mobile/select-kit/dropdown-select-box.scss
@@ -2,7 +2,7 @@
   &.dropdown-select-box {
     .select-kit-collection {
       max-height: 200px;
-      overflow-y: auto;
+      overflow-y: scroll;
     }
   }
 }
